# Lumen

./: .clang-format  .clang-tidy  .cursorignore  .gitignore  .gitmodules  CMakeLists.txt  ChatGPT-mark!!!.md  DEVELOP.md  Doxyfile  README.md  aasd  asd.md  todo.md  vcpkg.json
SDL3Examples/000_sdl3/: CMakeLists.txt
SDL3Examples/001_boot/: CMakeLists.txt
VulkanGuide/000_qdwqewq/: CMakeLists.txt
VulkanTutorial/: CMakeLists.txt
VulkanTutorial/000_base_code/: CMakeLists.txt
VulkanTutorial/010_fixed_functions/: CMakeLists.txt
VulkanTutorial/011_render_passes/: CMakeLists.txt
VulkanTutorial/012_graphics_pipeline_complete/: CMakeLists.txt
VulkanTutorial/013_framebuffers/: CMakeLists.txt
VulkanTutorial/014_command_buffers/: CMakeLists.txt
VulkanTutorial/015_hello_triangle/: CMakeLists.txt
VulkanTutorial/016_frames_in_flight/: CMakeLists.txt
VulkanTutorial/017_swap_chain_recreation/: CMakeLists.txt
VulkanTutorial/018_vertex_input/: CMakeLists.txt
VulkanTutorial/019_vertex_buffer/: CMakeLists.txt
VulkanTutorial/020_staging_buffer/: CMakeLists.txt
VulkanTutorial/021_index_buffer/: CMakeLists.txt
VulkanTutorial/022_descriptor_layout/: CMakeLists.txt
VulkanTutorial/023_descriptor_sets/: CMakeLists.txt
VulkanTutorial/024_texture_image/: CMakeLists.txt
VulkanTutorial/025_sampler/: CMakeLists.txt
VulkanTutorial/026_texture_mapping/: CMakeLists.txt
VulkanTutorial/027_depth_buffering/: CMakeLists.txt
VulkanTutorial/028_model_loading/: CMakeLists.txt
VulkanTutorial/029_mipmapping/: CMakeLists.txt
VulkanTutorial/029_mipmapping_pre_gen/: CMakeLists.txt
VulkanTutorial/031_compute_shader/: CMakeLists.txt
VulkanTutorial/indicators_demos/: CMakeLists.txt
demo3d/: CMakeLists.txt
demo3d/shaders/: cube.frag  cube.vert
demo3d/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: engine.hpp  pch.hpp
engine/shaders/: light_icon.frag  pbr_forward.frag  pbr_forward.vert
engine/src/: config.hpp  engine.hpp  pch.hpp  stb_image.cpp  stb_impl.cpp  vma_impl.cpp
engine/src/core/: path.cpp  (+10 more)
examples/: CMakeLists.txt
examples/EasyVulkan/: CMakeLists.txt
examples/VulkanTutorial/: CMakeLists.txt
examples/blinn_phong/: CMakeLists.txt
examples/cube3d/: CMakeLists.txt
examples/cube3d_imgui/: CMakeLists.txt
examples/cube3d_lighting/: CMakeLists.txt
examples/cube3d_shadow_map/: CMakeLists.txt
examples/demo3d/: CMakeLists.txt
examples/example_cpr_opencv/: CMakeLists.txt
examples/example_drogon/: CMakeLists.txt
examples/example_efsw/: CMakeLists.txt
examples/example_eventpp/: CMakeLists.txt
examples/example_llvm/: CMakeLists.txt
examples/example_sdlgpu/: CMakeLists.txt
examples/example_sqlite3/: CMakeLists.txt
examples/example_stduuid/: CMakeLists.txt
examples/example_uvw/: CMakeLists.txt
examples/example_zxing/: CMakeLists.txt
examples/gltf_pbr/: CMakeLists.txt
examples/imgui_test/: CMakeLists.txt
examples/pbr/: CMakeLists.txt
examples/pfr_test/: CMakeLists.txt
examples/rectangle/: CMakeLists.txt
examples/rectangle_indexed/: CMakeLists.txt
examples/rectangle_indexed_texture/: CMakeLists.txt
examples/rectangle_indexed_uniform/: CMakeLists.txt
examples/renderer_pass_test/: CMakeLists.txt
examples/renderer_test/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt
examples/shader_reflect/: CMakeLists.txt
examples/shader_test/: CMakeLists.txt
examples/tinygltf_raw_load_test/: CMakeLists.txt
examples/triangle/: CMakeLists.txt
examples/two_pass_test/: CMakeLists.txt
examples/two_subpass_merge_test/: CMakeLists.txt
examples/vkguide/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/shaders/: texture.frag  triangle.frag  triangle.vert
sandbox/src/: main.cpp
sdl_cpp_VulkanTutorial/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_000_base_code/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_001_instance_creation/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_002_validation_layers/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_003_physical_device_selection/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_004_logical_device/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_005_window_surface/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_006_swap_chain_creation/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_007_image_views/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_008_graphics_pipeline/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_009_shader_modules/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_012_graphics_pipeline_complete/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_016_frames_in_flight/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_017_swap_chain_recreation/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_018_vertex_input/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_019_vertex_buffer/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_020_staging_buffer/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_020_staging_buffer_optimization/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_021_index_buffer/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_022_descriptor_layout/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_023_descriptor_sets/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_024_texture_image/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_025_sampler/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_026_texture_mapping/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_027_depth_buffering/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_028_model_loading/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_029_mipmapping/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_029_mipmapping_pre_gen/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_030_multisampling/: CMakeLists.txt
sdl_cpp_VulkanTutorial/sdl_cpp_031_compute_shader/: CMakeLists.txt
shadertoy/: CMakeLists.txt
shadertoy/shaders/: shadertoy.frag
shadertoy/src/: main.cpp
test/: CMakeLists.txt  test_pipeline_key.cpp  test_render_graph.cpp  test_shader_reflection.cpp
test/gen_mipmap/: CMakeLists.txt
test/test_drogon/: CMakeLists.txt  main.cpp
tutorial/: CMakeLists.txt
(+815 files in other folders)
