add_subdirectory(000_base_code)
add_subdirectory(001_instance_creation)
add_subdirectory(002_validation_layers)
add_subdirectory(003_physical_device_selection)
add_subdirectory(004_logical_device)
add_subdirectory(005_window_surface)
add_subdirectory(006_swap_chain_creation)
add_subdirectory(007_image_views)
add_subdirectory(008_graphics_pipeline)
add_subdirectory(009_shader_modules)
add_subdirectory(010_fixed_functions)
add_subdirectory(011_render_passes)
add_subdirectory(012_graphics_pipeline_complete)
add_subdirectory(013_framebuffers)
add_subdirectory(014_command_buffers)
add_subdirectory(015_hello_triangle)
add_subdirectory(016_frames_in_flight)
add_subdirectory(017_swap_chain_recreation)
add_subdirectory(018_vertex_input)
add_subdirectory(019_vertex_buffer)
add_subdirectory(020_staging_buffer)
add_subdirectory(020_staging_buffer_optimization)
add_subdirectory(021_index_buffer)
add_subdirectory(022_descriptor_layout)
add_subdirectory(023_descriptor_sets)
add_subdirectory(024_texture_image)
add_subdirectory(025_sampler)
add_subdirectory(026_texture_mapping)
add_subdirectory(027_depth_buffering)
add_subdirectory(028_model_loading)
add_subdirectory(029_mipmapping)
add_subdirectory(029_mipmapping_pre_gen)
add_subdirectory(030_multisampling)
add_subdirectory(031_compute_shader)

