add_subdirectory(sdl_cpp_VulkanTutorial)
add_subdirectory(vkguide)
add_subdirectory(VulkanTutorial)
add_subdirectory(example_drogon)
add_subdirectory(example_sqlite3)
add_subdirectory(example_zxing)
add_subdirectory(example_cpr_opencv)
add_subdirectory(example_stduuid)
add_subdirectory(example_efsw)
add_subdirectory(example_eventpp)
add_subdirectory(example_uvw)
add_subdirectory(example_sdlgpu)
add_subdirectory(EasyVulkan)

