# add_subdirectory(sandbox)
# add_subdirectory(shadertoy)
# add_subdirectory(demo3d)
# add_subdirectory(tinygltf_raw_load_test)
add_subdirectory(shader_test)
# add_subdirectory(gltf_pbr)
add_subdirectory(triangle)
add_subdirectory(rectangle)
add_subdirectory(rectangle_indexed)
add_subdirectory(rectangle_indexed_texture)
add_subdirectory(rectangle_indexed_uniform)
add_subdirectory(cube3d)
add_subdirectory(cube3d_imgui)
add_subdirectory(cube3d_lighting)
add_subdirectory(cube3d_shadow_map)
