add_subdirectory(shader_test)
add_subdirectory(triangle)
add_subdirectory(rectangle)
add_subdirectory(rectangle_indexed)
add_subdirectory(rectangle_indexed_texture)
add_subdirectory(rectangle_indexed_uniform)
add_subdirectory(cube3d)
add_subdirectory(cube3d_imgui)
add_subdirectory(pbr)
add_subdirectory(gltf_pbr)
