add_subdirectory(sdl_cpp_000_base_code)
add_subdirectory(sdl_cpp_001_instance_creation)
add_subdirectory(sdl_cpp_002_validation_layers)
add_subdirectory(sdl_cpp_003_physical_device_selection)
add_subdirectory(sdl_cpp_004_logical_device)
add_subdirectory(sdl_cpp_005_window_surface)
add_subdirectory(sdl_cpp_006_swap_chain_creation)
add_subdirectory(sdl_cpp_007_image_views)
add_subdirectory(sdl_cpp_008_graphics_pipeline)
add_subdirectory(sdl_cpp_009_shader_modules)
add_subdirectory(sdl_cpp_010_fixed_functions)
add_subdirectory(sdl_cpp_011_render_passes)
add_subdirectory(sdl_cpp_012_graphics_pipeline_complete)
add_subdirectory(sdl_cpp_013_framebuffers)
add_subdirectory(sdl_cpp_014_command_buffers)
add_subdirectory(sdl_cpp_015_hello_triangle)
add_subdirectory(sdl_cpp_016_frames_in_flight)
add_subdirectory(sdl_cpp_017_swap_chain_recreation)
add_subdirectory(sdl_cpp_018_vertex_input)
add_subdirectory(sdl_cpp_019_vertex_buffer)
add_subdirectory(sdl_cpp_020_staging_buffer)
add_subdirectory(sdl_cpp_020_staging_buffer_optimization)
add_subdirectory(sdl_cpp_021_index_buffer)
add_subdirectory(sdl_cpp_022_descriptor_layout)
add_subdirectory(sdl_cpp_023_descriptor_sets)
add_subdirectory(sdl_cpp_024_texture_image)
add_subdirectory(sdl_cpp_025_sampler)
add_subdirectory(sdl_cpp_026_texture_mapping)
add_subdirectory(sdl_cpp_027_depth_buffering)
add_subdirectory(sdl_cpp_028_model_loading)
add_subdirectory(sdl_cpp_029_mipmapping)
add_subdirectory(sdl_cpp_030_multisampling)

